--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,39 +8,11 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <% if current_user %>
-      <header class="header d-flex justify-content-between p-3">
-        <div>
-          <%= image_tag("inta.png", :alt => "logo", :width => "50") %>
-        </div>
-        <div>
-          <input type="text" class="d-none d-md-inline" placeholder="Rechercher sur Facebook">
-        </div>
-        <div>
-          <div>Accueil</div>
-          <div>Messagerie</div>
-          <div>Explore</div>
-          <div>Favories</div>
-          <div>
-            Profil
-            <ul>
-              <li>Profil</li>
-              <li>Enregistré</li>
-              <li>Paramètre</li>
-              <li>Changer de compte</li>
-              <li><%= link_to "Se déconnecter", destroy_session_path %></li>
-            </ul>
-          </div>
-        </div>
-      </header>
-    <% end %>
     <% if @user %>
       <% if @user.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
           <ul>
           <% @user.errors.full_messages.each do |message| %>
             <li><%= message %></li>
@@ -49,6 +21,39 @@
         </div>
       <% end %>
     <% end %>
-    <%= yield %>
+    <% if notice %>
+      <p id="notice"><%= notice %></p>
+    <% end %>
+    <% if current_user %>
+      <div class="header_container">
+        <header  class="mx-auto header d-flex justify-content-between align-items-center p-3">
+          <div>
+            <%= image_tag("inta.png", :alt => "logo", :width => "100") %>
+          </div>
+          <div>
+            <input type="text" class="d-none d-md-inline" placeholder="Rechercher sur Instagram">
+          </div>
+          <div class="d-flex">
+            <div class="mx-2"><i class="bi bi-house-door"></i></div>
+            <div class="mx-2"><i class="bi bi-chat"></i></i></div>
+            <div class="mx-2"><i class="bi bi-compass"></i></div>
+            <div class="mx-2"><i class="bi bi-heart"></i></div>
+            <div class="mx-2 position-relative" id="profil">
+              <div class="profil_image" style="width: 30px; height: 30px; background-image: url(<%= current_user.image.url %>);"></div>
+              <ul class="position-absolute top-100 list-unstyled collapse" id="drop_down_profil">
+                <li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-person-circle"></i><%= link_to "Profil", user_path(current_user.id), class: "flex-grow-1" %></li>
+                <li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-bookmark"></i>Enregistré</li>
+                <li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-gear-wide"></i>Paramètre</li>
+                <li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-arrow-repeat"></i>Changer de compte</li>
+                <li class="py-1 d-flex align-items-center border-top"><%= link_to "Se déconnecter", destroy_session_path, class: "m-2 flex-grow-1" %></li>
+              </ul>
+            </div>
+          </div>
+        </header>
+      </div>
+    <% end %>
+    <div class="main_container">
+      <%= yield %>
+    </div>
   </body>
 </html>
