--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,18 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<p>
-  <strong>Password digest:</strong>
-  <%= @user.password_digest %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <%= image_tag(@user.image.url) if @user.image && @user.image.url %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<div class="d-flex align-items-center">
+  <div class="m-4">
+    <div class="profil_image mx-md-5" style="width: 150px; height: 150px; background-image: url(<%= @user.image.url %>);"></div>
+  </div>
+  <div>
+    <div class="d-flex align-items-center">
+      <h1 class="mx-3"><%= @user.name %></h1>
+      <div class="mx-3"><%= link_to 'Editer le profil', edit_user_path(@user), class: "btn border" %></div>
+      <i class="mx-3 m-2 bi bi-gear-wide"></i>
+    </div>
+    <div>
+      <span class="mx-3">0 messages</span>
+      <span class="mx-3">0 abonnés</span>
+      <span class="mx-3">1 suivant</span>
+    </div>
+  </div>
+</div>
+<hr>
