Fonctionnalité de création, de confirmation, de modification et de suppression de post

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,7 @@ body{
 }
 .header_container{
     background-color: white;
+    z-index: 10;
 }
 .header{
     height: 60px;
@@ -74,6 +75,9 @@ small{
     color: rgb(136, 136, 136);
 }
 
+.main_container{
+    padding-top: 60px;
+}
 
 @media screen and (max-width: 767px) {
     .big_profil_image{
