--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <% flash.each do |key, value|%>
+        <div class="alert alert-info col-6 position-fixed mt-3 alert-dismissible fade show" role="alert" style="z-index: 100;">
+          <%= content_tag(:span, value, class: "#{key}") %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <% end%>
+      </div>
+    </div>
     <% if @user %>
       <% if @user.errors.any? %>
         <div id="error_explanation">
@@ -21,11 +31,8 @@
         </div>
       <% end %>
     <% end %>
-    <% if notice %>
-      <p id="notice"><%= notice %></p>
-    <% end %>
     <% if current_user %>
-      <div class="header_container">
+      <div class="header_container position-fixed w-100">
         <header  class="mx-auto header d-flex justify-content-between align-items-center p-3">
           <div>
             <%= image_tag("inta.png", :alt => "logo", :width => "100") %>
@@ -34,7 +41,7 @@
             <input type="text" class="d-none d-md-inline" placeholder="Rechercher sur Instagram">
           </div>
           <div class="d-flex">
-            <div class="mx-2"><i class="bi bi-house-door"></i></div>
+            <div class="mx-2"><%= link_to posts_path do %><i class="bi bi-house-door"></i><% end %></div>
             <div class="mx-2"><i class="bi bi-chat"></i></i></div>
             <div class="mx-2"><i class="bi bi-compass"></i></div>
             <div class="mx-2"><i class="bi bi-heart"></i></div>
