--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,33 +1,34 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Image</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="d-flex">
+  <div class="flex-grow-1" id="main_content" style="width: 60%; margin:0px; padding: 0px;">
+    <div class="d-flex justify-content-between mt-3">
+      <h1>Posts</h1>
+      <div><%= link_to 'Nouveau post', new_post_path, class: "btn btn-primary" %></div>
+    </div>
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.image %></td>
-        <td><%= post.user %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="card my-5">
+        <div class="card-header">
+          <div  class="d-flex align-items-center">
+            <div class="profil_image m-2" style="width: 40px; height: 40px; background-image: url(<%= post.user.image.url %>);"></div>
+            <div>
+              <div><%= post.user.name %></div>
+              <div><small><%= post.user.email %></small></div>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div><%= image_tag(post.image.url, class: "w-100") if post.image && post.image.url %></div>
+
+          <h4><strong><%= post.title %></strong></h4>
+          <div><%= post.content %></div>
+        </div>
+        <% if post.user.id==current_user.id %>
+          <div class="card-footer d-flex justify-content-around">
+            <div><%= link_to 'Edit', edit_post_path(post), class: "btn btn-primary" %></div>
+            <div><%= link_to 'Destroy', post, class: "btn btn-primary", method: :delete, data: { confirm: 'Are you sure?' } %></div>
+          </div>
+          <% end %>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+  </div>
+  <%= render 'sugestions' %>
+</div>
