--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,3 +16,36 @@
   </div>
 </div>
 <hr>
+<div class="d-flex">
+  <div class="flex-grow-1" id="main_content" style="width: 60%; margin:0px; padding: 0px;">
+    <div class="d-flex justify-content-between mt-3">
+      <h1>Mes posts</h1>
+      <div><%= link_to 'Nouveau post', new_post_path, class: "btn btn-primary" %></div>
+    </div>
+    <% @posts.each do |post| %>
+      <div class="card my-5">
+        <div class="card-header">
+          <div  class="d-flex align-items-center">
+            <div class="profil_image m-2" style="width: 40px; height: 40px; background-image: url(<%= post.user.image.url %>);"></div>
+            <div>
+              <div><%= post.user.name %></div>
+              <div><small><%= post.user.email %></small></div>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div><%= image_tag(post.image.url, class: "w-100") if post.image && post.image.url %></div>
+
+          <h4><strong><%= post.title %></strong></h4>
+          <div><%= post.content %></div>
+        </div>
+        <% if post.user.id==current_user.id %>
+          <div class="card-footer d-flex justify-content-around">
+            <div><%= link_to 'Edit', edit_post_path(post), class: "btn btn-primary" %></div>
+            <div><%= link_to 'Destroy', post, class: "btn btn-primary", method: :delete, data: { confirm: 'Are you sure?' } %></div>
+          </div>
+          <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
