--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,7 +60,7 @@ body{
     width: 250px;
     min-width: 250px;
 }
-.parametres .slidebar_left li:hover{
+li:hover{
     background-color: rgb(246, 246, 246);
 }
 .parametres .label{
