--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,17 +42,17 @@
           </div>
           <div class="d-flex">
             <div class="mx-2"><%= link_to posts_path do %><i class="bi bi-house-door"></i><% end %></div>
+            <div class="mx-2"><%= link_to favorites_path do %><i class="bi bi-bookmark"></i><% end %></div>
             <div class="mx-2"><i class="bi bi-chat"></i></i></div>
-            <div class="mx-2"><i class="bi bi-compass"></i></div>
             <div class="mx-2"><i class="bi bi-heart"></i></div>
             <div class="mx-2 position-relative" id="profil">
-              <div class="profil_image" style="width: 30px; height: 30px; background-image: url(<%= current_user.image.url %>);"></div>
+              <div class="profil_image" style="width: 30px; height: 30px; background-image: url(<%= current_user.image.url %>);cursor: pointer;"></div>
               <ul class="position-absolute top-100 list-unstyled collapse" id="drop_down_profil">
-                <li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-person-circle"></i><%= link_to "Profil", user_path(current_user.id), class: "flex-grow-1" %></li>
-                <li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-bookmark"></i>Enregistré</li>
-                <li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-gear-wide"></i>Paramètre</li>
+                <%= link_to user_path(current_user.id) do %><li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-person-circle"></i>Profil</li><% end %>
+                <%= link_to favorites_path do %><li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-bookmark"></i>Enregistré</li><% end %>
+                <%= link_to edit_user_path(current_user) do %><li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-gear-wide"></i>Paramètre</li><% end %>
                 <li class="py-1 d-flex align-items-center"><i class="m-2 bi bi-arrow-repeat"></i>Changer de compte</li>
-                <li class="py-1 d-flex align-items-center border-top"><%= link_to "Se déconnecter", destroy_session_path, class: "m-2 flex-grow-1" %></li>
+                <%= link_to destroy_session_path do %><li class="p-2 d-flex align-items-center border-top">Se déconnecter</li><% end %>
               </ul>
             </div>
           </div>
