Fonctionnalité d'envoi de mail

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,8 +1,8 @@
 <div class="d-flex">
   <div class="flex-grow-1" id="main_content" style="width: 60%; margin:0px; padding: 0px;">
     <div class="d-flex justify-content-between mt-3">
-      <h1>Mes favorites</h1>
-      <div><%= link_to 'Nouveau favorite', posts_path, class: "btn btn-primary" %></div>
+      <h1>Mes favoris</h1>
+      <div><%= link_to 'Nouveau favori', posts_path, class: "btn btn-primary" %></div>
     </div>
     <% @favorites.each do |favorite| %>
       <div class="card my-5">
