--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,28 +1,29 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: user, local: true, class: "form") do |form| %>
+    <div class="p-5 border" style="background-color: white;">
+        <div>
+            <%= image_tag("inta.png", style: "width: 100%") %>
+        </div>
 
-  <div class="field">
-    <%= form.text_field :name, placeholder: "Nom" %>
-  </div>
+        <div class="field my-3">
+            <%= form.text_field :name, placeholder: "Nom", class: "form-control" %>
+        </div>
 
-  <div class="field">
-    <%= form.text_field :email, placeholder: "Adresse email" %>
-  </div>
+        <div class="field my-3">
+            <%= form.text_field :email, placeholder: "Adresse email", class: "form-control" %>
+        </div>
 
-  <% if action_name == 'new' || action_name == 'create' %>
-    <div class="field">
-      <%= form.password_field :password, placeholder: "Mot de passe" %>
+        <div class="field my-3">
+          <%= form.password_field :password, placeholder: "Mot de passe", class: "form-control" %>
+        </div>
+
+        <div class="field my-3">
+          <%= form.file_field :image, class: "form-control" %>
+        </div>
+
+        <div class="actions my-3">
+            <%= form.submit submit_text, class: "btn btn-primary text-white my-3 yet_a_compte w-100" %>
+        </div>
+
+        <%= link_to "J'ai déjà un compte", new_session_path, class: "btn btn-primary text-white my-3 yet_a_compte w-100" %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.file_field :image %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit submit_text, class: "btn btn-primary text-white my-3 yet_a_compte" %>
-  </div>
-
-  <% if action_name == 'new' || action_name == 'create' %>
-    <%= link_to "J'ai déjà un compte", new_session_path, class: "btn btn-primary text-white my-3 yet_a_compte" %>
-  <% end %>
 <% end %>
